--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "format": "pnpm rome format source/ --write",
     "watch": "tsc -w",
-    "start": "node --watch .",
+    "start": "nodemon .",
     "dev": "run-p start watch"
   },
   "type": "module",
@@ -22,11 +22,13 @@
     "@sapphire/plugin-editable-commands": "^3.0.0",
     "@sapphire/plugin-logger": "^3.0.1",
     "@sapphire/utilities": "^3.11.0",
+    "@types/ms": "^0.7.31",
     "discord-api-types": "^0.37.35",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "got": "^12.6.0",
     "mongoose": "^7.0.1",
+    "ms": "^2.1.3",
     "picocolors": "^1.0.0"
   }
 }
