--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sapphire/discord-utilities": "^3.0.0",
     "@sapphire/discord.js-utilities": "^6.0.3",
     "@sapphire/framework": "^4.2.0",
+    "@sapphire/pieces": "^3.6.0",
     "@sapphire/plugin-editable-commands": "^3.0.0",
     "@sapphire/plugin-logger": "^3.0.1",
     "@sapphire/utilities": "^3.11.0",
@@ -29,6 +30,7 @@
     "got": "^12.6.0",
     "mongoose": "^7.0.1",
     "ms": "^2.1.3",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "safe-regex2": "^3.1.0"
   }
 }
